change 1 jenkins test

--- a/linux.html
+++ b/linux.html
@@ -1,4 +1,4 @@
 <body bgcolor = 'yellow' </body>
 
-<h3>to see jenkins job running auto lets test
+<h3>to see jenkins job running auto lets test and watch
 </h3>
